--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,20 @@ header {
   .top-discription p:first-of-type {
     font-size: 22px; }
 
+.beds .beds__item .my-rating-stars .rating-stars__item {
+  color: gray;
+  cursor: pointer;
+  font-size: 20px;
+  transition: .2s; }
+.beds .beds__item .my-rating-stars .rating-stars__item:hover,
+.beds .beds__item .my-rating-stars .rating-stars__item:hover ~ .rating-stars__item {
+  color: gold; }
+.beds .beds__item .my-rating-stars[data-total-value="1"] .rating-stars__item:nth-child(n+5),
+.beds .beds__item .my-rating-stars[data-total-value="2"] .rating-stars__item:nth-child(n+4),
+.beds .beds__item .my-rating-stars[data-total-value="3"] .rating-stars__item:nth-child(n+3),
+.beds .beds__item .my-rating-stars[data-total-value="4"] .rating-stars__item:nth-child(n+2),
+.beds .beds__item .my-rating-stars[data-total-value="5"] .rating-stars__item:nth-child(n+1) {
+  color: orange; }
 .beds .beds__item .beds__item__disc .item-lost:first-of-type p:first-of-type {
   font-size: 18px; }
 .beds .beds__item__sale {
@@ -55,58 +69,61 @@ header {
     color: white;
     font-size: 25px; }
 
-.visuhide {
+/*.visuhide {
   position: absolute !important;
   overflow: hidden;
   width: 1px;
   height: 1px;
-  clip: rect(1px, 1px, 1px, 1px); }
+  clip: rect(1px, 1px, 1px, 1px);
+}
 
 .star__container:hover .star__item, .star__radio:checked ~ .star__item {
   -webkit-filter: grayscale(0);
-  filter: grayscale(0); }
+  filter: grayscale(0);
+}
 
 .star__container:not(:hover) > .star__radio:nth-of-type(1):checked ~ .star__item:nth-of-type(1) ~ .star__item, .star__container:not(:hover) > .star__radio:nth-of-type(2):checked ~ .star__item:nth-of-type(2) ~ .star__item, .star__container:not(:hover) > .star__radio:nth-of-type(3):checked ~ .star__item:nth-of-type(3) ~ .star__item, .star__container:not(:hover) > .star__radio:nth-of-type(4):checked ~ .star__item:nth-of-type(4) ~ .star__item, .star__container:not(:hover) > .star__radio:nth-of-type(5):checked ~ .star__item:nth-of-type(5) ~ .star__item, .star__item, .star__item:hover ~ .star__item {
   -webkit-filter: grayscale(1);
-  filter: grayscale(1); }
+  filter: grayscale(1);
+}
 
 .star__radio:nth-of-type(1):checked ~ .star__item:nth-of-type(1)::before {
   -webkit-transform: scale(1.5);
   transform: scale(1.5);
-  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1); }
-
+  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1);
+}
 .star__radio:nth-of-type(2):checked ~ .star__item:nth-of-type(2)::before {
   -webkit-transform: scale(1.5);
   transform: scale(1.5);
-  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1); }
-
+  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1);
+}
 .star__radio:nth-of-type(3):checked ~ .star__item:nth-of-type(3)::before {
   -webkit-transform: scale(1.5);
   transform: scale(1.5);
-  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1); }
-
+  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1);
+}
 .star__radio:nth-of-type(4):checked ~ .star__item:nth-of-type(4)::before {
   -webkit-transform: scale(1.5);
   transform: scale(1.5);
-  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1); }
-
+  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1);
+}
 .star__radio:nth-of-type(5):checked ~ .star__item:nth-of-type(5)::before {
   -webkit-transform: scale(1.5);
   transform: scale(1.5);
-  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1); }
-
+  transition-timing-function: cubic-bezier(0.5, 1.5, 0.25, 1);
+}
 .star__container {
   display: flex;
   margin: auto;
-  transition: box-shadow .3s ease; }
-
+  transition: box-shadow .3s ease;
+}
 .star__item {
   display: inline-flex;
   width: 1.25em;
-  height: 1.5em; }
-
+  height: 1.5em;
+}
 .star__item::before {
-  content: "тнРя╕П";
+  content: "⭐️";
   display: inline-block;
   margin: auto;
   font-size: .75em;
@@ -117,8 +134,8 @@ header {
   transform-origin: 50% 33.3%;
   transition: -webkit-transform .3s ease-out;
   transition: transform .3s ease-out;
-  transition: transform .3s ease-out, -webkit-transform .3s ease-out; }
-
+  transition: transform .3s ease-out, -webkit-transform .3s ease-out;
+}*/
 @media screen and (max-width: 768px) {
   header {
     background-image: url("../images/top-bg.jpg");
